2009-03-14  Nicolas François  <nicolas.francois@centraliens.net>

	* man/po/Makefile.in.in: xml2po cannot exclude one entity for
	expansion. Make sure config.xml does not exist when the POT file
	is created in order to keep the configurations in the POT file
	* man/generate_translations.mak: make sure config.xml does not
	exist neither when the translated XML is generated. Add the
	missing %config; (strip out by xml2po). and make sure config.xml
	is present when the translated manpage is generated.
	* man/generate_mans.mak: config.xml is needed for the generation
	of manpages (already in the .deps for the English manpages, but
	needed for the translations).
	* man/Makefile.am: Added missing CREATE_HOME.xml.

2009-03-14  Nicolas François  <nicolas.francois@centraliens.net>

	* etc/login.defs: Added note for PAM enabled configurations.

2009-03-14  Nicolas François  <nicolas.francois@centraliens.net>

	* man/Makefile.am: Compute the dependencies for building the
	manpages.
	* man/generate_mans.deps: Added Makefile dependency rules.

2009-03-14  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/addgrps.c: Fix warnings.

2009-03-14  Nicolas François  <nicolas.francois@centraliens.net>

	* man/po/fr.po: Added missing space.

2009-03-14  Nicolas François  <nicolas.francois@centraliens.net>

	* man/lastlog.8.xml: Document that there might be entries, for
	deleted users, that are not displayed.

2009-03-14  Nicolas François  <nicolas.francois@centraliens.net>

	* man/chgpasswd.8.xml, man/chpasswd.8.xml: Fix the man page in
	case SHA crypt is not supported.

2009-03-14  Nicolas François  <nicolas.francois@centraliens.net>

	* man/vipw.8.xml: MAX_MEMBERS_PER_GROUP is not used by vipw and
	vigr.

2009-03-14  Nicolas François  <nicolas.francois@centraliens.net>

	* man/login.defs.5.xml: Indicate that sg uses the same variables
	as newgrp.
	* man/login.defs.5.xml: vipw does not use any variable.
	* man/login.defs.5.xml: In PAM enabled configurations, login still