@@ -1,3 +1,7 @@
+2009-03-15  Nicolas François  <nicolas.francois@centraliens.net>
+
+	* libmisc/addgrps.c: Fix compilation warnings.
+
 2009-03-14  Nicolas François  <nicolas.francois@centraliens.net>
 
 	* man/po/Makefile.in.in: xml2po cannot exclude one entity for
